--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div class="container" style="margin: 8rem auto 2rem">
-  <p class="h2 text-center">Scorer | Login</p>
+  <p class="h2 text-center">Admin | Login</p>
 
   <div class="row justify-content-center my-4">
     <div class="col-lg-4">
@@ -31,7 +31,6 @@
       </form>
 
       <div class="text-center mt-3">
-        Not Have An Account? <a routerLink="/scorer/signup">Signup</a><br />
         <a routerLink="">Home</a>
       </div>
     </div>
