--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,14 +36,36 @@
             >Live Matches</a
           >
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login" routerLinkActive="active"
-            >Login</a
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
           >
+            Scorer
+          </a>
+          <ul
+            class="dropdown-menu dropdown-menu-dark"
+            aria-labelledby="navbarDropdown"
+          >
+            <li>
+              <a class="dropdown-item" routerLink="/scorer/signup">Signup</a>
+            </li>
+            <li>
+              <a class="dropdown-item" routerLink="/scorer/login">Login</a>
+            </li>
+          </ul>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" routerLink="/signup" routerLinkActive="active"
-            >Signup</a
+          <a
+            class="nav-link"
+            routerLink="/admin/login"
+            routerLinkActive="active"
+            >Admin</a
           >
         </li>
       </ul>
