--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <!-- Do not show this to scorer and admin. This is only for viewer(fans) -->
-<navbar *ngIf="!router.url.includes('dashboard')"></navbar>
-<footer *ngIf="!router.url.includes('dashboard')"></footer>
+<navbar
+  *ngIf="!router.url.includes('dashboard') && !router.url.includes('football')"
+></navbar>
+<footer
+  *ngIf="!router.url.includes('dashboard') && !router.url.includes('football')"
+></footer>
 
 <!-- Show this to scorer only -->
-<scorer-dashboard *ngIf="router.url.includes('dashboard')"></scorer-dashboard>
+<scorer-dashboard
+  *ngIf="
+    (router.url.includes('dashboard') && router.url.includes('scorer')) ||
+    router.url.includes('football')
+  "
+>
+</scorer-dashboard>
