--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,5 @@ $form-select-focus-box-shadow: 0;
   background-color: #e2e2e2;
   font-size: 1.2rem;
 }
+
+@import "../src/app/modules/scorer/dashboard/dashboard.component.scss";
