Delete match implemented

--- a/src/app/modules/football/create-match/create-match.component.html
+++ b/src/app/modules/football/create-match/create-match.component.html
@@ -495,7 +495,8 @@
     type="submit"
     class="btn btn-primary mt-3"
     value="Create Match"
-    [disabled]="matchForm.invalid || team1Form.invalid || team2Form.invalid"
     (click)="createMatch()"
   />
 </div>
+
+<!-- [disabled]="matchForm.invalid || team1Form.invalid || team2Form.invalid" -->
