--- a/src/app/modules/scorer/dashboard/dashboard.component.html
+++ b/src/app/modules/scorer/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid pl-lg-0">
   <div class="row">
     <div
-      class="navbar flex-column col-lg-2 col-md-3 fixed-left navbar-collapse-sm navbar-expand-md bg-primary navbar-dark mynav"
+      class="navbar flex-column col-lg-2 col-md-3 navbar-collapse-sm navbar-expand-md bg-primary navbar-dark mynav"
     >
       <h4 class="text-light h4">Live Scoring System</h4>
 
@@ -30,7 +30,7 @@
               >Dashboard</a
             >
           </li>
-          <li class="nav-item dropend">
+          <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
               href="#"
@@ -72,7 +72,7 @@
       </nav>
     </div>
 
-    <div class="col-lg-10 col-md-9" style="margin-left: 15.5rem">
+    <div class="col-lg-10 col-md-9 offset-lg-2 offset-md-3 mycontainer">
       <router-outlet></router-outlet>
     </div>
   </div>
