--- a/src/app/modules/scorer/dashboard/dashboard.component.scss
+++ b/src/app/modules/scorer/dashboard/dashboard.component.scss
@@ -1,10 +1,15 @@
 .mynav {
   position: fixed;
-  overflow: auto;
 }
 
 @media (min-width: 768px) {
   .mynav {
     height: 100vh;
+  }
+}
+
+@media (max-width: 768px) {
+  .mynav {
+    position: relative;
   }
 }
