--- a/src/app/modules/scorer/signup/signup.component.html
+++ b/src/app/modules/scorer/signup/signup.component.html
@@ -46,9 +46,9 @@
           formControlName="confirmpassword"
         />
 
-        <label for="confirm_password" class="form-label">Mobile Number</label>
+        <label for="mobile_no" class="form-label">Mobile Number</label>
         <input
-          type="password"
+          type="text"
           class="form-control mb-3"
           id="mobile_no"
           name="mobile_no"
@@ -66,7 +66,7 @@
       </form>
 
       <div class="text-center mt-3">
-        Already Have An Account? <a routerLink="/scorer">Login</a><br />
+        Already Have An Account? <a routerLink="/scorer/login">Login</a><br />
         <a href="" routerLink="">Home</a>
       </div>
     </div>
