--- a/src/app/modules/football/start-match/start-match.component.html
+++ b/src/app/modules/football/start-match/start-match.component.html
@@ -61,7 +61,7 @@
   <input
     type="submit"
     class="btn btn-primary mt-4 mb-5"
-    value="Create Lineup"
+    value="Start Match"
     (click)="onSubmit()"
     [disabled]="isDisabled"
   />
