--- a/src/app/modules/scorer/home/home.component.html
+++ b/src/app/modules/scorer/home/home.component.html
@@ -25,18 +25,63 @@
       </thead>
 
       <tbody>
-        <tr *ngFor="let m of matches">
-          <td>{{ m.title }}</td>
-          <td>{{ m.team1.name }}</td>
-          <td>{{ m.team2.name }}</td>
-          <td>{{ m.date | date: "mediumDate" }}</td>
-          <td>{{ m.start_time }}</td>
-          <td><a routerLink="/football/start/{{ m._id }}">Start</a></td>
-          <td>
-            <a routerLink="/scorer/dashboard" (click)="delete(m._id)">Delete</a>
-          </td>
+        <tr *ngFor="let m of fbmatches">
+          <ng-template [ngIf]="m.status == 'not_started'">
+            <td>{{ m.title }}</td>
+            <td>{{ m.team1.name }}</td>
+            <td>{{ m.team2.name }}</td>
+            <td>{{ m.date | date: "mediumDate" }}</td>
+            <td>{{ m.start_time }}</td>
+            <td><a routerLink="/football/start/{{ m._id }}">Start</a></td>
+            <td>
+              <a routerLink="/scorer/dashboard" (click)="delete(m._id)"
+                >Delete</a
+              >
+            </td>
+          </ng-template>
+        </tr>
+        <tr *ngIf="fbcount == 0">
+          <td colspan="7" class="text-center">No upcoming matches</td>
         </tr>
       </tbody>
     </table>
+
+    <div class="mt-5">
+      <h5 class="h5" style="font-weight: normal">Volleyball</h5>
+
+      <table class="table table-striped mt-3">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Team 1</th>
+            <th>Team 2</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th colspan="2">Action</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr *ngFor="let m of fbmatches">
+            <ng-template [ngIf]="m.status == 'not_started'">
+              <td>{{ m.title }}</td>
+              <td>{{ m.team1.name }}</td>
+              <td>{{ m.team2.name }}</td>
+              <td>{{ m.date | date: "mediumDate" }}</td>
+              <td>{{ m.start_time }}</td>
+              <td><a routerLink="/football/start/{{ m._id }}">Start</a></td>
+              <td>
+                <a routerLink="/scorer/dashboard" (click)="delete(m._id)"
+                  >Delete</a
+                >
+              </td>
+            </ng-template>
+          </tr>
+          <tr *ngIf="fbcount == 0">
+            <td colspan="7" class="text-center">No upcoming matches</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
