--- a/src/app/modules/scorer/dashboard/dashboard.component.html
+++ b/src/app/modules/scorer/dashboard/dashboard.component.html
@@ -46,10 +46,7 @@
               aria-labelledby="navbarDropdown"
             >
               <li>
-                <a
-                  class="dropdown-item"
-                  routerLink="/football/create"
-                  routerLinkActive="active"
+                <a class="dropdown-item" routerLink="/football/create"
                   >Football</a
                 >
               </li>
