Volleyball scoring implemented

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -3,7 +3,7 @@
   <div class="card-body">
     <h5 class="card-title text-center">
       <a
-        routerLink="/{{ game.name | lowercase }}"
+        routerLink="/{{ game.name | lowercase }}/view"
         class="btn btn-primary"
         style="font-size: 1.1rem"
         >{{ game.name }}</a
