--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!-- Do not show this to scorer and admin. This is only for viewer(fans) -->
 <navbar
   *ngIf="
-    !router.url.includes('dashboard') &&
-    !router.url.includes('football') &&
-    !router.url.includes('volleyball')
+    (!router.url.includes('dashboard') &&
+      !router.url.includes('football') &&
+      !router.url.includes('volleyball')) ||
+    router.url.includes('view')
   "
 ></navbar>
 <footer
@@ -18,8 +19,8 @@
 <scorer-dashboard
   *ngIf="
     (router.url.includes('dashboard') && router.url.includes('scorer')) ||
-    router.url.includes('football') ||
-    router.url.includes('volleyball')
+    ((router.url.includes('football') || router.url.includes('volleyball')) &&
+      !router.url.includes('view'))
   "
 >
 </scorer-dashboard>
