--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
             >Home</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!this.router.url.includes('view')">
           <a class="nav-link" href="#games">Games</a>
         </li>
         <li class="nav-item">
