--- a/src/app/modules/volleyball/volleyball.component.html
+++ b/src/app/modules/volleyball/volleyball.component.html
@@ -35,10 +35,10 @@
   </div>
 </div>
 
- <div class="container">
+<div class="container">
   <div class="row">
-  <ng-container *ngFor="let m of matches">
-    <div class="col-4" *ngIf="this.flag == 'all' || this.flag == m.status">
+    <ng-container *ngFor="let m of matches">
+      <div class="col-4" *ngIf="this.flag == 'all' || this.flag == m.status">
         <div class="card mb-4">
           <div class="card-body">
             <h5 class="h5 card-title">{{ m.title }}</h5>
@@ -49,12 +49,10 @@
               <h5 class="h5">{{ m.team1.name }} - {{ m.score.team1.set }}</h5>
               <h5 class="h5">{{ m.team2.name }} - {{ m.score.team2.set }}</h5>
             </div>
-            <a href="#" class="card-link">View</a>
-          </div>   
-        </div>   
+            <a routerLink="{{ m._id }}/" class="card-link">View</a>
+          </div>
         </div>
-        </ng-container>
       </div>
+    </ng-container>
   </div>
- 
-
+</div>
