--- a/src/app/modules/football/football.component.html
+++ b/src/app/modules/football/football.component.html
@@ -49,7 +49,7 @@
               <h5 class="h5">{{ m.team1.name }} - {{ m.score.team1.goal }}</h5>
               <h5 class="h5">{{ m.team2.name }} - {{ m.score.team2.goal }}</h5>
             </div>
-            <a href="#" class="card-link">View</a>
+            <a routerLink="{{ m._id }}/" class="card-link">View</a>
           </div>
         </div>
       </div>
