Admin functionality added plus view-match for football fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,3 +24,8 @@
   "
 >
 </scorer-dashboard>
+
+<!-- Show this to admin only -->
+<admin-dashboard
+  *ngIf="router.url.includes('admin') && router.url.includes('dashboard')"
+></admin-dashboard>
