--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,8 +10,8 @@
         necessitatibus pariatur. Fugit, ut.
       </h4>
 
-      <a routerLink="/signup" class="btn btn-primary btn-lg my-lg-2"
-        >Live Matches</a
+      <a routerLink="/scorer/login" class="btn btn-primary btn-lg my-lg-2"
+        >Login</a
       >
     </div>
 
