--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div
       class="navbar flex-column col-lg-2 col-md-3 navbar-collapse-sm navbar-expand-md bg-primary navbar-dark mynav"
     >
-      <h4 class="text-light h4">Live Scoring System</h4>
+      <h4 class="text-light h4">Live Scoring System | Admin</h4>
 
       <button
         class="navbar-toggler"
@@ -25,7 +25,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              routerLink="/scorer/dashboard/home"
+              routerLink="/admin/dashboard/home"
               routerLinkActive="active"
               >Dashboard</a
             >
@@ -39,7 +39,7 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              Create Match
+              Manage Matches
             </a>
             <ul
               class="dropdown-menu dropdown-menu-dark"
