--- a/src/app/modules/scorer/home/home.component.html
+++ b/src/app/modules/scorer/home/home.component.html
@@ -26,7 +26,7 @@
 
       <tbody>
         <tr *ngFor="let m of fbmatches">
-          <ng-template [ngIf]="m.status == 'not_started'">
+          <ng-template [ngIf]="m.status == 'upcoming'">
             <td>{{ m.title }}</td>
             <td>{{ m.team1.name }}</td>
             <td>{{ m.team2.name }}</td>
