--- a/src/app/modules/admin/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
               >Dashboard</a
             >
           </li>
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
               href="#"
@@ -56,7 +56,7 @@
                 >
               </li>
             </ul>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#" (click)="logout()">Logout</a>
           </li>
