--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,10 +4,10 @@
       <h1 class="h1">Scoring System For Local Matches</h1>
 
       <h4 class="h4 my-lg-3" style="font-weight: 450">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
-        dolores sapiente saepe tenetur optio provident consequuntur molestias.
-        Sapiente vero at assumenda sit laboriosam id dolorum obcaecati
-        necessitatibus pariatur. Fugit, ut.
+        This Web application will boost the local sports environment as it
+        allows any registered user to initiate the scoring of their match and
+        all other users will be able to see the detailed scores of that match
+        from anywhere. Score will be displayed with all details.
       </h4>
 
       <a routerLink="/scorer/login" class="btn btn-primary btn-lg my-lg-2"
